syntax = "proto3";

package p3optional;

option go_package = "/p3optional;p3optional";

import "google/protobuf/duration.proto";


message Redis {
  string network = 1;
  string addr = 2;
  string password = 3;
  optional int32 db = 4; // 可选参数，该字段生成的pb文件中，是指针类型
  google.protobuf.Duration dial_timeout = 5; // 该字段生成的pb文件中，是指针类型
  google.protobuf.Duration read_timeout = 6; // 该字段生成的pb文件中，是指针类型
  google.protobuf.Duration write_timeout = 7; // 该字段生成的pb文件中，是指针类型
}



// protoc --proto_path=. --go_out=paths=source_relative:. *.proto
// v3.15.0 no longer require the --experimental_allow_proto3_optional flag
// 参考：https://github.com/protocolbuffers/protobuf/releases/tag/v3.15.0